# bert-predict

./: .gitignore  Cargo.toml  README.md  build.rs
config/: log4rs.yaml
data/: batch-gen.sh  eval.csv  test.tsv  train.tsv
examples/: gen-csvs.rs
onnx-model/: requirements.bash
onnx-model/google-bert-chinese/: hfoptimum-check.py  hfoptimum-glue.py  hfoptimum-model.py  hfoptimum-requirements.txt  make.sh  model.onnx-export.py  onnx-artifacts.py  onnx-requirements.txt  run_eval.py
onnx-model/google-bert-chinese/bak/: onnx-export.py
onnx-model/google-bert-chinese/hfoptimum-training/: run_classification.py  run_inference.py  zero_stage_2.json
onnx-ort-train-sentiment/: Cargo.toml  build.rs
onnx-ort-train-sentiment-dataset/: Cargo.toml
onnx-ort-train-sentiment-dataset/data/: batch-gen.sh  train.csv
onnx-ort-train-sentiment-dataset/src/: dataset.rs  lib.rs  text_label.rs
onnx-ort-train-sentiment-dataset/src/csv/: mod.rs  record.rs
onnx-ort-train-sentiment-dataset/tests/: pretokenize.rs
onnx-ort-train-sentiment/src/: lib.rs  ort_training.rs  train.rs
onnx_bert_chinese_ort_train/: Cargo.toml  build.rs
onnx_bert_chinese_ort_train/examples/: ort_session.rs  ort_train_example.rs  ort_training_session.rs  train.rs  training.rs
onnx_bert_chinese_ort_train/src/: lib.rs  ort_training.rs  training.rs
onnx_bert_chinese_ort_train_dataset/: Cargo.toml
onnx_bert_chinese_ort_train_dataset/examples/: pretokenize.rs
onnx_bert_chinese_ort_train_dataset/src/: dataset.rs  lib.rs  text_label.rs
onnx_bert_chinese_ort_train_dataset/src/csv/: mod.rs  record.rs
src/: commons_path.rs  commons_tokio.rs  lib.rs  predict.rs
src/init/: mod.rs
src/pretrain/: mod.rs
tools/: onnxruntime-training-artifacts.py
tools/google-bert-chinese/: check.py  model-make.sh  onnx-artifacts.py  onnx-export.py  onnx-make.sh  optimum_export_official_models.py  requirements.txt
tools/google-bert-chinese/bak/: optimum_export_custom_models.py  optimum_export_official_models-2.py  optimum_export_official_models.py
tools/google-bert-chinese/example/model/: config.json
tools/google-bert-chinese/example/onnx-training/: eval_model.onnx  training_model.onnx
