[workspace]
members = [
	'onnx-ort-train-sentiment',
	'onnx-ort-train-sentiment-dataset'
]
default-members = [
	'.',
	'onnx-ort-train-sentiment',
	'onnx-ort-train-sentiment-dataset'
]

[workspace.dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
    "registry",
] }
tracing-attributes = "0.1"
tracing-appender = "0.2.3"
clap = { version = "4.5.9", features = ["derive"] }
lazy_static = "1.5.0"
futures = "0.3.30"
anyhow = "1"
tokio = { version = "1.38.0", features = [
    "sync",
    "rt-multi-thread",
    "macros",
    "io-util",
    "fs",
] }
tokio-stream = { version = "0.1.15", features = ["io-util"] }
tokio-metrics = "0.3.1"
tokio-console = "0.1.11"
async-stream = "0.3.5"
futures-util = "0.3.30"




[package]
name = "common"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-attributes.workspace = true
tracing-appender.workspace = true
clap.workspace = true
lazy_static.workspace = true
futures.workspace = true
anyhow.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-metrics.workspace = true
tokio-console.workspace = true
async-stream.workspace = true
futures-util.workspace = true

[profile.dev]
rpath = true

[profile.release]
rpath = true


