[workspace]
members = [
    '.',
	'onnx-ort-train-sentiment',
	'onnx-ort-train-sentiment-dataset'
]
default-members = [
	'.',
	'onnx-ort-train-sentiment',
	'onnx-ort-train-sentiment-dataset'
]

[workspace.dependencies]
ort = { version = "2.0.0-rc.4", default-features = false, features = [
    "ndarray",
    "half",
    "training",
    "load-dynamic",
] }
ndarray = "0.15"
half = "2.1"
tokenizers = { version = ">=0.13.4", default-features = false, features = [
    "onig",
] }
kdam = "0.5"
csv-async = { version = "1.3.0", features = ["with_serde", "tokio"] }
serde = "1.0.204"

tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
    "registry",
] }
tracing-attributes = "0.1"
tracing-appender = "0.2.3"
tracing-error = "0.2.0"
tokio = { version = "1.38.0", features = [
    "sync",
    "rt-multi-thread",
    "macros",
    "io-util",
    "fs",
] }
tokio-stream = { version = "0.1.15", features = ["io-util"] }
tokio-metrics = "0.3.1"
tokio-console = "0.1.11"
async-stream = "0.3.5"
futures = "0.3.30"
futures-util = "0.3.30"
pin-project-lite = "0.2"

clap = { version = "4.5.9", features = ["derive"] }
lazy_static = "1.5.0"
anyhow = "1"
num_cpus = "1.16.0"
hex = "0.4"

yss-commons = { path = "." }


[package]
name = "yss-commons"
version = "0.0.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-attributes.workspace = true
tracing-appender.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-metrics.workspace = true
tokio-console.workspace = true
async-stream.workspace = true
futures.workspace = true
futures-util.workspace = true
tracing-error.workspace = true
pin-project-lite.workspace = true

clap.workspace = true
lazy_static.workspace = true
anyhow.workspace = true

[profile.dev]
rpath = true

[profile.release]
rpath = true


