[package]
publish = false
name = "onnx-ort-train-sentiment-dataset"
version = "0.0.0"
edition = "2021"

[features]
default = []

[dependencies]
ort = { version = "2.0.0-rc.4", default-features = false, features = [
    "ndarray",
    "half",
    "training",
    "load-dynamic",
] }
ndarray = "0.15"
half = "2.1"
tokenizers = { version = ">=0.13.4", default-features = false, features = [
    "onig",
] }
kdam = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
    "registry",
] }
tracing-attributes = "0.1"
tracing-appender = "0.2.3"

clap = { version = "4.5.9", features = ["derive"] }
lazy_static = "1.5.0"
futures = "0.3.30"
anyhow = "1"
tokio = { version = "1.38.0", features = [
    "sync",
    "rt-multi-thread",
    "macros",
    "io-util",
    "fs",
] }
tokio-stream = { version = "0.1.15", features = ["io-util"] }
tokio-metrics = "0.3.1"
tokio-console = "0.1.11"
async-stream = "0.3.5"
futures-util = "0.3.30"
csv-async = { version = "1.3.0", features = ["with_serde", "tokio"] }
serde = "1.0.204"

# [lib]
# name = "sentiment_dataset"

[[bin]]
name = "dataset"
path = "src/dataset.rs"
