[package]
publish = false
name = "onnx-ort-train-sentiment-dataset"
version = "0.0.0"
edition = "2021"

[features]
default = [ "tokio-async-stream" ]
tokio-async-stream = [ "dep:async-stream" ]
futures-async-stream = [ "dep:futures-async-stream" ]

[dependencies]
ort = { version = "2.0.0-rc.4", default-features = false, features = [
    "ndarray",
    "half",
    "training",
    "load-dynamic",
] }
ndarray = "0.15"
half = "2.1"
tokenizers = { version = ">=0.13.4", default-features = false, features = [
    "onig",
] }
kdam = "0.5"
csv-async = { version = "1.3.0", features = ["with_serde", "tokio"] }
serde = "1.0.204"
simd-json = "0.13"

async-stream = { version = "0.3.5", optional = true }
futures-async-stream = { version = "0.2", optional = true }

tracing.workspace = true
tracing-subscriber.workspace = true
tracing-attributes.workspace = true
tracing-appender.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-metrics.workspace = true
tokio-console.workspace = true
futures.workspace = true
futures-util.workspace = true
pin-project-lite.workspace = true

anyhow.workspace = true
clap.workspace = true
lazy_static.workspace = true
num_cpus.workspace = true
hex.workspace = true

yss-commons.workspace = true

[dev-dependencies]

# [lib]
# name = "sentiment_dataset"

[[bin]]
name = "dataset"
path = "src/dataset.rs"
