[package]
publish = false
name = "onnx_bert_chinese_ort_train"
version = "0.0.0"
edition = "2021"

[features]
cuda = ["ort/cuda"]

[dependencies]
async-stream = { version = "0.3.5", optional = true }
#futures-async-stream = { version = "0.2", optional = true }

ort.workspace = true
ndarray.workspace = true
half.workspace = true
tokenizers.workspace = true
kdam.workspace = true
serde.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
tracing-attributes.workspace = true
tracing-appender.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-metrics.workspace = true
tokio-console.workspace = true
futures.workspace = true
futures-util.workspace = true
pin-project-lite.workspace = true

anyhow.workspace = true
clap.workspace = true
lazy_static.workspace = true
num_cpus.workspace = true
hex.workspace = true
regex.workspace = true

yss-commons.workspace = true
onnx_bert_chinese_ort_train_dataset.workspace = true

[dev-dependencies]
rand = "0.8"
simd-json = "0.13"


[[bin]]
name = "training"
path = "src/training.rs"

[lib]
path = "src/lib.rs"

# build.rs中配置
# [target.x86_64-unknown-linux-gnu]
# rustflags = [ "-Clink-args=-Wl,-rpath,\\$ORIGIN", "-Clink-args=-Wl,-rpath,\\$ORIGIN/../lib" ]
